Migration pipeline screen added
